updated for fall 2025

--- a/index.html
+++ b/index.html
@@ -131,13 +131,21 @@
                     <div class="col-sm-9">
                         <h3>About Me</h3>
                         <p>
-                            I am a 2nd year PhD student in Computer Science at Harvard University, advised by <a href="http://melanie-weber.com" target="_blank">Melanie Weber</a>. My research lies in the interface of machine learning, optimization, and statistics. 
-							My research includes Riemannian optimization and high-dimensional learning dynamics. Also, I am incorporating feature learning of neural networks into regression methods and interested in developing novel optimization algorithms for large-scale models.
-							My research has been supported in part by the NSERC Postgraduate Scholarship, the Harvard Dean’s Competitive Fund for Promising Scholarship, NSF, and FQRNT.
+                            I am a 3rd year PhD student in Computer Science at Harvard University supervised by Yue Lu. 
+                            <br> 
+                            <br> 
+                        
+                            My research lies in the interface of machine learning, optimization, and statistics. 
+							I am interested in designing state-of-the-art interpretable machine learning models on large-scale tabular data with provable guarantees. I apply these models toward problems in national security and healthcare.
+                            I am also interested in Riemannian optimization and high-dimensional learning dynamics.
+	                        My research has been supported in part by the NSERC Postgraduate Scholarship, the Harvard Dean’s Competitive Fund for Promising Scholarship, NSF, and FQRNT.
                         </p>
                         <p>
                             Previously, I was a Master's student at McGill University and the Montreal Institute of Learning Algorithms (MILA), supervised by <a href="https://cypaquette.github.io/" target="_blank">Courtney Paquette</a> and 
 							<a href="https://elliotpaquette.github.io/" target="_blank">Elliot Paquette</a>. I completed my Bachelor's degree in Statistics and Computer Science at McGill University.
+                        </p>
+                        <p>
+                            Since May 2025, I have been working with Lawrence Livermore National Laboratory on the development of interpretable machine learning models for problems in the energy sector.
                         </p>
 						<p>
                             In 2022 and 2023, I interned as a deep learning researcher at <a href="https://www.valencelabs.com" target = "_blank">ValenceLabs</a>, where I worked on generative models for drug discovery. 
