--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <div class="col-sm-9">
                         <h3>About Me</h3>
                         <p>
-                            I am a 3rd year PhD student in Computer Science at Harvard University supervised by Yue Lu. 
+                            I am a 3rd year PhD student in Computer Science at <a href="https://www.harvard.edu/" target="_blank">Harvard University</a> supervised by <a href="https://lu.seas.harvard.edu" target="_blank">Yue Lu</a>.                         
                             <br> 
                             <br> 
                         
